--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,29 @@
-dash
-matplotlib
-numpy
-pandas
-plotly
-pymongo
-requests
-ipywidgets
-notebook
-expiringdict
+chardet==3.0.4
+Click==7.0
+cycler==0.10.0
+dash==1.7.0
+dash-core-components==1.6.0
+dash-html-components==1.0.2
+dash-renderer==1.2.2
+dash-table==4.5.1
+dnspython==1.16.0
+expiringdict==1.2.0
+Flask==1.1.1
+Flask-Compress==1.4.0
+idna==2.8
+ipywidgets==7.5.1
+itsdangerous==1.1.0
+kiwisolver==1.1.0
+matplotlib==3.1.2
+numpy==1.17.4
+pandas==0.25.3
+plotly==4.4.1
+pymongo==3.10.0
+pyparsing==2.4.5
+pytz==2019.3
+requests==2.22.0
+retrying==1.3.3
+typing==3.7.4.1
+urllib3==1.25.7
+Werkzeug==0.16.0
+widgetsnbextension==3.5.1
