--- a/requirements.txt
+++ b/requirements.txt
@@ -16,10 +16,13 @@ itsdangerous==1.1.0
 kiwisolver==1.1.0
 matplotlib==3.1.2
 numpy==1.17.4
+packaging==19.2
 pandas==0.25.3
 plotly==4.4.1
+py==1.8.0
 pymongo==3.10.0
 pyparsing==2.4.5
+pytest==5.3.1
 pytz==2019.3
 requests==2.22.0
 retrying==1.3.3
